--- a/app/pug/partials/navigation.pug
+++ b/app/pug/partials/navigation.pug
@@ -4,7 +4,7 @@ mixin navigation(props = {})
   -const { navActive } = props
   -
     var items = [
-      {title:'Employers', name:'employers', link:'#'},
+      {title:'Employers', name:'employers', link:'employers-page.html'},
       {title:'Clients', name:'clients', link:'#'},
       {title:'Offices', name:'offices', link:'#'},
       {title:'Accounting', name:'accounting', link:'#'},
