--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -18,6 +18,7 @@
 @import ./pages/application-page
 @import ./pages/employer-application-page
 @import ./pages/settings-page
+@import ./pages/employers-page
 // Components
 @import ./components/spinner
 @import ./components/columng-group
