--- a/app/pug/settings-page.pug
+++ b/app/pug/settings-page.pug
@@ -18,7 +18,7 @@ block variables
 block content
   .settings-page
     .settings-page__header
-      +header({navActive:'clients'})
+      +header()
     .settings-page__wrap
       .container
         .settings-page__heading
@@ -32,10 +32,11 @@ block content
             +alert({icon:'images/icons/check-circle.svg', title:'Changes was saved successfuly', color:'surfie-green'})
         .settings-page__catalog
           .catalog
-            .catalog__tabs.tabs.js-tabs
-              each tab in tabs
-                div(class=`catalog__tab js-tabs-tab ${tab.isActive ? 'is-active' : ''}` data-tab=tab.name)
-                  .catalog__tab-title #{tab.title}
+            .catalog__header
+              .catalog__tabs.tabs.js-tabs
+                each tab in tabs
+                  div(class=`catalog__tab js-tabs-tab ${tab.isActive ? 'is-active' : ''}` data-tab=tab.name)
+                    .catalog__tab-title #{tab.title}
             .catalog__content
               .catalog__content-item.tabs__content.js-tabs-content.is-active(data-content="general")
                 include /pages/settings-page/general
