--- a/app/sass/abstract/variables.sass
+++ b/app/sass/abstract/variables.sass
@@ -34,6 +34,7 @@ $c-caribbean-green: #00D06C
 $c-boston-blue    : #3F88C5
 $c-cornflower-blue: #518EF8
 $c-brick-red      : #CC2936
+$c-whating-yellow : #F09000
 // UI elements
 $body-bg: $c-athens-gray
 // Sizes
