--- a/app/sass/base/typography.sass
+++ b/app/sass/base/typography.sass
@@ -49,6 +49,8 @@ p, .p
   color: $c-silver-chalice
 .text-caribbean-green
   color: $c-caribbean-green
+.text-whating-yellow
+  color: $c-whating-yellow
 
 // Font weights
 .font-regular
