--- a/app/sass/components/catalog.sass
+++ b/app/sass/components/catalog.sass
@@ -1,8 +1,13 @@
 .catalog
   &__header
     display: flex
-  &__search
-    // flex: 1
+    align-items: center
+  &__left
+    margin-right: 5px
+  &__right
+    margin-left: 5px
+    &--ml-auto
+      margin-left: auto
   &__tabs
     display: flex
     overflow-x: auto
