--- a/app/sass/components/dropdown.sass
+++ b/app/sass/components/dropdown.sass
@@ -1,10 +1,10 @@
 .dropdown
   position: relative
   height: 100%
-  min-width: 100%
   // Elemets
   &__toggle
     cursor: pointer
+    user-select: none
   &__body
     display: none
     position: absolute
