--- a/app/sass/components/input.sass
+++ b/app/sass/components/input.sass
@@ -26,3 +26,8 @@
       font-size: rem(12px)
   &--hidden
     display: none
+  // Background
+  &--bg-white
+    background-color: $c-white
+    &:focus
+      border-color: $c-white
