--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -79,3 +79,5 @@
 @import ./components/edit-avatar
 @import ./components/editable-text
 @import ./components/alert
+@import ./components/lang-combinations-dropdown
+@import ./components/choose-actions-dropdown
