--- a/app/pug/partials/input.pug
+++ b/app/pug/partials/input.pug
@@ -1,11 +1,12 @@
 mixin input(props = {})
-  -const { classes, bordered, size, standard, hidden } = props
+  -const { classes, bordered, bg, size, standard, hidden } = props
   -
     const classnames = classNames({
       'input': standard !== false,
       'input--bordered': bordered,
       'input--hidden': hidden,
       [`input--${size}`]: size,
+      [`input--bg-${bg}`]: bg,
       [classes]: classes,
     })
 
