--- a/app/sass/components/button.sass
+++ b/app/sass/components/button.sass
@@ -3,7 +3,7 @@
   display: inline-flex
   justify-content: center
   align-items: center
-  padding: 12px 15px
+  padding: 11px 15px
   color: $c-white
   font-size: rem(14px)
   line-height: 1
@@ -12,7 +12,7 @@
   border-radius: $r-primary
   transition: 0.2s
   background-color: $c-surfie-green
-  border: 1px solid transparent
+  border: 2px solid transparent
   transition: 0.2s
   user-select: none
   cursor: pointer
@@ -42,6 +42,8 @@
     border-radius: 50%
   &--shadowed
     box-shadow: $s-primary
+  &--start
+    justify-content: flex-start
   &--bordered
     color: $c-surfie-green
     background-color: transparent
@@ -60,17 +62,19 @@
     &:active
       border-color: darken($c-surfie-green, 10%)
       background-color: darken($c-surfie-green, 10%)
+
   // Background colors
-  &--bg-cornflower-blue
-    background-color: $c-cornflower-blue
-    &:hover
-      background-color: darken($c-cornflower-blue, 8%)
-    &:focus
-      color: $c-white
-      background-color: darken($c-cornflower-blue, 8%)
-      box-shadow: 0 0 0 0.2rem rgba($c-cornflower-blue, .5)
-    &:active
-      background-color: darken($c-cornflower-blue, 10%)
+  @each $name, $color in ('cornflower-blue': $c-cornflower-blue, 'caribbean-green': $c-caribbean-green )
+    &--bg-#{$name}
+      background-color: $color
+      &:hover
+        background-color: darken($color, 8%)
+      &:focus
+        color: $c-white
+        background-color: darken($color, 8%)
+        box-shadow: 0 0 0 0.2rem rgba($color, .5)
+      &:active
+        background-color: darken($color, 10%)
   &--bg-white
     color: $c-surfie-green
     background-color: $c-white
@@ -112,11 +116,35 @@
       box-shadow: 0 0 0 0.2rem rgba($c-alabaster, .5)
     &:active
       background-color: darken($c-alabaster, 10%)
+
+  // Border colors
+  @each $name, $color in ('caribbean-green':$c-caribbean-green,'silver-chalice':$c-silver-chalice,'boston-blue':$c-boston-blue,'brick-red':red)
+    &--border-#{$name}
+      color: $color
+      border-color: $color
+      background-color: transparent
+      &:hover
+        color: $c-white
+        border-color: darken($color, 8%)
+        background-color: darken($color, 8%)
+        svg
+          fill: $c-white
+      &:focus
+        border-color: darken($color, 8%)
+        background-color: darken($color, 8%)
+        box-shadow: 0 0 0 0.2rem rgba($color, .5)
+        svg
+          fill: $c-white
+      &:active
+        border-color: darken($color, 10%)
+        background-color: darken($color, 10%)
+
   // Colors
-  &--color-surfie-green
-    color: $c-surfie-green
-    &:hover, &:focus, &:active
-      color: $c-surfie-green
+  @each $name, $color in ('surfie-green':$c-surfie-green,'mine-shaft':$c-mine-shaft)
+    &--color-#{$name}
+      color: $color
+      &:hover, &:focus, &:active
+        color: $color
 
   // Sizes
   @each $size in ['20', '30', '40', '50', '60']
@@ -124,10 +152,14 @@
       width: #{$size}px
       height: #{$size}px
       padding: 0
-  // State
+
+  // States
   &--disabled
     pointer-events: none
     user-select: none
+  &--no-events
+    pointer-events: none
+
   // Elements
   &__prepend,
   &__append
