typography were refactored

--- a/app/sass/abstract/variables.sass
+++ b/app/sass/abstract/variables.sass
@@ -35,6 +35,7 @@ $c-boston-blue    : #3F88C5
 $c-cornflower-blue: #518EF8
 $c-brick-red      : #CC2936
 $c-whating-yellow : #F09000
+$colors: ('white': $c-white, 'alabaster' : $c-alabaster, 'athens-gray': $c-athens-gray, 'alto': $c-alto, 'silver-chalice' : $c-silver-chalice, 'tundora': $c-tundora, 'mine-shaft': $c-mine-shaft, 'surfie-green': $c-surfie-green, 'caribbean-green': $c-caribbean-green, 'boston-blue': $c-boston-blue, 'cornflower-blue': $c-cornflower-blue, 'brick-red': $c-brick-red, 'whating-yellow': $c-whating-yellow)
 // UI elements
 $body-bg: $c-athens-gray
 // Sizes
