--- a/app/sass/components/catalog.sass
+++ b/app/sass/components/catalog.sass
@@ -50,3 +50,8 @@
         padding: 0 30px
       +media-max($bp-sm)
         padding: 0 15px
+    &-footer
+      margin-top: 60px
+      padding: 0 50px
+      display: flex
+      justify-content: space-between
