--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -80,4 +80,6 @@
 @import ./components/editable-text
 @import ./components/alert
 @import ./components/lang-combinations-dropdown
+@import ./components/actions
 @import ./components/choose-actions-dropdown
+@import ./components/massive-actions-dropdown
