--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -48,6 +48,7 @@
 @import ./components/table-holder
 @import ./components/table
 @import ./components/tabs
+@import ./components/tooltip
 @import ./components/skill
 @import ./components/skill-checkbox
 @import ./components/palette
