--- a/app/static/styles/main.css
+++ b/app/static/styles/main.css
@@ -2815,6 +2815,31 @@ p,
   display: block;
 }
 
+.tooltip {
+  position: relative;
+}
+
+.tooltip:hover .tooltip__text {
+  visibility: visible;
+  opacity: 1;
+}
+
+.tooltip__text {
+  position: absolute;
+  top: 100%;
+  right: 2px;
+  visibility: hidden;
+  background-color: #FFFFFF;
+  padding: 10px 25px;
+  border-radius: 3px;
+  z-index: 1;
+  -webkit-box-shadow: 0px 0px 8px -4px rgba(0, 0, 0, 0.75);
+  box-shadow: 0px 0px 8px -4px rgba(0, 0, 0, 0.75);
+  opacity: 0;
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
+}
+
 .skill {
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
